# Ariane

./: .gitignore  Makefile  README.md  com.github.DesktopCreatorTeam.DesktopCreator.json  meson.build  requirements.txt
.github/workflows/: codeql.yml  flatpak.yml  greetings.yml  pypi_deps.yml  stale.yml  translation.yml
ariane/: add_row.py  app_page.py  ariane.in  constants.py.in  main.py  meson.build  show_row.py  welcome.py  window.py
build-aux/flatpak/: com.github.DesktopCreatorTeam.DesktopCreator.Devel.json  com.github.DesktopCreatorTeam.DesktopCreator.json  pypi-dependencies.json
data/: ariane.gresource.xml  com.github.ArianeTeam.Ariane.appdata.xml.in.in  com.github.ArianeTeam.Ariane.desktop.in.in  com.github.ArianeTeam.Ariane.gschema.xml.in  com.github.DesktopCreatorTeam.DesktopCreator.appdata.xml.in  com.github.DesktopCreatorTeam.DesktopCreator.desktop.in  com.github.DesktopCreatorTeam.DesktopCreator.gschema.xml.in  desktopcreator.gresource.xml  meson.build
data/icons/: meson.build
data/ui/: add_row.blp  app_page.blp  help-overlay.blp  meson.build  show_row.blp  welcome.blp  window.blp
desktopcreator/: constants.py.in  desktopcreator.in  dialogs.py  main.py  meson.build  show_row.py  window.py
po/: Ariane.pot  DesktopCreator.pot  LINGUAS  POTFILES  fr.po  it.po  ko.po  meson.build  nb_NO.po  nl.po  pt_BR.po  ru.po  tr.po
src/: desktopcreator.gresource.xml  desktopcreator.in  main.py  meson.build  window.py  window.ui
